--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 
 .background-main{
     height: 100vh;
-    background: linear-gradient(rgba(20,20,20, .5),rgba(20,20,20, .5)),url(../img/bg-1.jpeg);
+    background: linear-gradient(rgba(20,20,20, .5),rgba(20,20,20, .5)),url(/644a8acab69c3790517825.png);
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 89%, 51% 100%, 0 89%);
     clip-path: polygon(0 0, 100% 0, 100% 89%, 51% 100%, 0 89%);
 }
@@ -79,7 +79,7 @@
 .services-class{
     max-width: 100%;
     height: 78vh;
-    background: linear-gradient(rgba(20,20,20, .5),rgba(20,20,20, .5)),url(../img/bg-2.jpeg);
+    background: linear-gradient(rgba(20,20,20, .5),rgba(20,20,20, .5)),url(/mejores-librerias-javascript.jpg);
     background-position: center center;
     background-repeat:  no-repeat;
     background-attachment: fixed;
