--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -15,12 +15,33 @@ body{background-color:aliceblue;
             justify-content: space-around;
             height: 20rem;
            }
-.contenido{ width: 40%;
+.contenido{ width: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
             background-color: white;
             box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
+            margin: 2rem;
+            align-items: center;
+            border: 0.2rem solid green;
           }
-.contenido p{width: 80%;}
+.contenido p{width: 100%;
+              margin: 0.5rem;
+              justify-content: center;
+              align-items:center ;
+              text-align: center;
+              box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
+            }
+/* flechas */
+.flechas{display: flex;
+         width: 100%;
+        }
+.flechas img{width: 20%;
+             height: 20%;
+             transform: rotate(90deg);
+            }
+/* partes dentro de etiquetas  */
+.sub{display: flex;
+     justify-content: space-around;
+     align-items: start;
+    }
