--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root{
     --primary-font-color1: #ffffff; 
     --primary-font-color2: #007bff;
+    --primary-font-color3: red;
 }
 
 .navbar-light {
@@ -16,7 +17,7 @@
 
 .background-main{
     height: 100vh;
-    background: linear-gradient(rgba(20,20,20, .5),rgba(20,20,20, .5)),url(/644a8acab69c3790517825.png);
+    background: linear-gradient(rgba(20,20,20, .5),rgba(20,20,20, .5)),url(./img/644a8acab69c3790517825.png);
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 89%, 51% 100%, 0 89%);
     clip-path: polygon(0 0, 100% 0, 100% 89%, 51% 100%, 0 89%);
 }
@@ -97,18 +98,6 @@
     color: rgba(255,255,255,.7) !important
 }
 
-.contact-us{
-    max-width: 100%;
-    height: 100vh;
-    background: linear-gradient(rgba(20,20,20, .5),rgba(20,20,20, .5)),url(../img/bg-3.jpeg);
-    background-position: center center;
-    background-repeat:  no-repeat;
-    background-attachment: fixed;
-    background-size:  cover;
-    color: var(--primary-font-color1);
-    -webkit-clip-path: polygon(0 0, 100% 7%, 100% 100%, 0 94%);
-    clip-path: polygon(0 0, 100% 7%, 100% 100%, 0 94%);
-}
 
 
 footer.footer .social-link {
