--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -3,45 +3,71 @@ body{background-color:aliceblue;
      flex-direction: column;
      width: 100%;
      align-items: center;
+     justify-content: center;
+     text-align: center;
     }
 .titulo{display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        background-color: white;
+        border: 0.1rem solid blue;
        }
-.contenedor{width: 80%;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            height: 20rem;
+.titulo h1 {margin: 1rem;
            }
-.contenido{ width: 100%;
-            display: flex;
-            flex-direction: column;
+.contenedor_definicion{display: flex;
+                       justify-content: center;
+                       align-items: center;
+                       /*text-align: center;*/
+                       width: 100%;
+                       flex-direction: column;
+                       margin: 2rem;
+                      }
+.flecha{/*ransform: rotate(90deg);*/
+        /*border:0.2rem solid blue;*/
+        width: 100%;
+        height: 100%;
+        /*top: 100rem;*/
+        left: 50%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin: 2rem;
+       }
+.flecha img{width: 10%;
+            height: 10%;
+            /*border:0.2rem solid red;*/
+            transform: rotate(90deg);
+            margin: 3rem;
+           }
+.definición{display: flex;
             justify-content: center;
-            background-color: white;
-            box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
-            margin: 2rem;
+            flex-direction: column;
             align-items: center;
-            border: 0.2rem solid green;
-          }
-.contenido p{width: 100%;
-              margin: 0.5rem;
+            background-color: white;
+            border: 0.1rem solid blue;
+            width: 50%;
+            margin: 2rem;
+            text-align: center;
+           }
+.contenedor_practica{width: 100%;
+                     display: flex;
+                     justify-content: space-around;
+                     align-items: center;
+                     flex-direction: row;
+                    }
+.contenedor_1{display: flex;
+              width: 20%;
               justify-content: center;
-              align-items:center ;
-              text-align: center;
-              box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
-            }
-/* flechas */
-.flechas{display: flex;
-         width: 100%;
-        }
-.flechas img{width: 20%;
-             height: 20%;
-             transform: rotate(90deg);
-            }
-/* partes dentro de etiquetas  */
-.sub{display: flex;
-     justify-content: space-around;
-     align-items: start;
-    }
+              background-color: white;
+              box-sizing: 0rem -0.2rem 0rem red;
+              flex-direction: column;ç
+              margin: 1rem;
+             }
+.imagen_practica {display: flex;
+                  justify-content: center;
+                 }
+.imagen_practica img {width: 40%;
+                      height: 40%;
+                     }
+
