--- a/css/jhonny.css
+++ b/css/jhonny.css
@@ -170,3 +170,12 @@
    min-width: 100%;
     background-color: #908383;
 }
+
+/****************aqui empieza selecto//////////////////r*/
+
+#selector {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
