--- a/css/jhonny.css
+++ b/css/jhonny.css
@@ -179,3 +179,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+.ejemploAll{
+   
+    background-color: #908383;
+    margin-top: 10rem;
+    font-size: 2.5rem;
+    max-height: 8rem;
+}
