--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -1,73 +1,83 @@
 body{background-color:aliceblue;
-     display: flex;
-     flex-direction: column;
-     width: 100%;
-     align-items: center;
-     justify-content: center;
-     text-align: center;
-    }
-.titulo{display: flex;
-        justify-content: center;
+        display: flex;
         flex-direction: column;
-        align-items: center;
-        background-color: white;
-        border: 0.1rem solid blue;
-       }
-.titulo h1 {margin: 1rem;
-           }
-.contenedor_definicion{display: flex;
-                       justify-content: center;
-                       align-items: center;
-                       /*text-align: center;*/
-                       width: 100%;
-                       flex-direction: column;
-                       margin: 2rem;
-                      }
-.flecha{/*ransform: rotate(90deg);*/
-        /*border:0.2rem solid blue;*/
         width: 100%;
-        height: 100%;
-        /*top: 100rem;*/
-        left: 50%;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
         text-align: center;
-        margin: 2rem;
        }
-.flecha img{width: 10%;
-            height: 10%;
-            /*border:0.2rem solid red;*/
-            transform: rotate(90deg);
-            margin: 3rem;
-           }
-.definición{display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
-            background-color: white;
-            border: 0.1rem solid blue;
-            width: 50%;
-            margin: 2rem;
-            text-align: center;
-           }
-.contenedor_practica{width: 100%;
-                     display: flex;
-                     justify-content: space-around;
-                     align-items: center;
-                     flex-direction: row;
+   .titulo{display: flex;
+           justify-content: center;
+           flex-direction: column;
+           align-items: center;
+           background-color: white;
+           border: 0.1rem solid blue;
+           margin-top: 2rem;
+          }
+          
+   .titulo h1 {margin: 1rem;
+              }
+   .contenedor_definicion{display: flex;
+                          justify-content: center;
+                          align-items: center;
+                          /*text-align: center;*/
+                          width: 100%;
+                          flex-direction: column;
+                          margin: 2rem;
+                         }
+   .flecha{/*ransform: rotate(90deg);*/
+           /*border:0.2rem solid blue;*/
+           width: 100%;
+           height: 100%;
+           /*top: 100rem;*/
+           left: 50%;
+           justify-content: center;
+           align-items: center;
+           text-align: center;
+           margin: 2rem;
+          }
+   .flecha img{width: 10%;
+               height: 10%;
+               /*border:0.2rem solid red;*/
+               transform: rotate(90deg);
+               margin: 3rem;
+              }
+   .definición{display: flex;
+               justify-content: center;
+               flex-direction: column;
+               align-items: center;
+               background-color: white;
+               border: 0.1rem solid blue;
+               width: 50%;
+               margin: 2rem;
+               text-align: center;
+              }
+   .contenedor_practica{width: 100%;
+                        display: flex;
+                        justify-content: space-around;
+                        align-items: center;
+                        flex-direction: column;
+                        margin-bottom: 3rem;
+                        /*border: 0.5rem solid red;*/
+                       }
+   .contenedor_1{display: flex;
+                 width: 80%;
+                 justify-content: center;
+                 background-color: white;
+                 /*box-sizing: 0rem -0.2rem 0rem red;*/
+                 flex-direction: column;
+                 margin: 1rem;
+                }
+   .imagen_practica {display: flex;
+                     justify-content: center;
                     }
-.contenedor_1{display: flex;
-              width: 20%;
-              justify-content: center;
-              background-color: white;
-              box-sizing: 0rem -0.2rem 0rem red;
-              flex-direction: column;ç
-              margin: 1rem;
-             }
-.imagen_practica {display: flex;
-                  justify-content: center;
-                 }
-.imagen_practica img {width: 40%;
-                      height: 40%;
-                     }
-
+   .imagen_practica img {width: 40%;
+                         height: 40%;
+                        }
+   .lista_claslist {justify-content: center;
+                    align-items: center;
+                    background-color: white;
+                    width: 80%;
+                    border: 0.1rem solid blue;
+                   }
+   
