--- a/css/jhonny.css
+++ b/css/jhonny.css
@@ -201,3 +201,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+.frame2{
+    min-width: 100%;
+   
+    display: flex;
+    gap:10rem;
+} 
+
